--- a/index.html
+++ b/index.html
@@ -102,5 +102,18 @@
   </div>
 </body>
 <script src="js.js"></script>
+<!-- Display public IP address using external service -->
+<script>
+  fetch('https://checkip.amazonaws.com')
+    .then(response => response.text())
+    .then(ip => {
+      const el = document.createElement('p');
+      el.textContent = 'Served by: ' + ip.trim();
+      el.style.color = 'gray';
+      el.style.fontSize = '0.9em';
+      document.body.appendChild(el);
+    });
+</script>
+
 
 </html>
